tests/good/5/main.sm
(module Main imports (StdLib))

(vars (
  (let x 0)
  (let y 0)
))

(functions (

  # this function will cause a runtime exception
  (function fail (a b)
    (set! a 23))

  (function main ()
    (begin
      (let seven 7)
      (fail x y)
    )
  )

))
