tests/bad/leaky_var/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function foo ()
    (begin
      (while tt
        (let x 0)
      )
      (set! x 0) # Invalid
      0
    )
  )

  (function bar ()
    (begin
      (if tt
        (let x 0)
        (let y 0)
      )
      (set! x 0) # Invalid
      (set! y 0) # Invalid
      0
    )
  )

  (function main ()
    0
  )
))
